fix logout bug, add skeleton to profile loading and add light dark mode to profile section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,14 @@ body {
     @apply dark:bg-gray-900;
 }
 
+input {
+    @apply dark:bg-white;
+}
+
+select {
+    @apply dark:bg-white;
+}
+
 .noSelectionOrDrag {
     user-drag: none;
     -webkit-user-drag: none;
